2008-01-06  Sam Steingold  <sds@gnu.org>

	* reploop.lisp (break-loop): remove #\. from the end of a message

2008-01-06  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1865567 ]: hangs at the end of input script
	* reploop.lisp (main-loop): revert the 2003-12-18 patch: exit on
	EOF on all streams to avoid CLISP hanging at the end of script on
	"clisp < script" and "cat script | clisp"

2008-01-05  Sam Steingold  <sds@gnu.org>

	* Makefile.devel: remove all ffcall-related targets (libffcall is
	now hosted on savannah)
	* ffcall/: remove the tree

2008-01-03  Sam Steingold  <sds@gnu.org>

	* spvw.d (size_arg): turn into a function from macro SIZE_ARG;
	accept Tera and Peta on 64-bit platforms
	(parse_options): fix limit_low argument to size_arg()

2008-01-03  Sam Steingold  <sds@gnu.org>

	* makemake.in: pass "-o ./" to "clisp -c" uniformly
	(MEMOPT): new variable: -m 2MW for compilation

2007-12-31  Sam Steingold  <sds@gnu.org>

	* pathname.d, win32aux.d: use true/false instead of TRUE/FALSE
	* pathname.d (error_delete_open, error_rename_open): print subr name
	(check_rename_open): add
	(rename_file, create_backup_file): use it

2007-12-31  Sam Steingold  <sds@gnu.org>

	Rename EXT:DELETE-DIR, EXT:MAKE-DIR, and EXT:RENAME-DIR to
	EXT:DELETE-DIRECTORY, EXT:MAKE-DIRECTORY, and EXT:RENAME-DIRECTORY,
	respectively, for consistency with EXT:PROBE-DIRECTORY,
	EXT:DEFAULT-DIRECTORY and CL:PATHNAME-DIRECTORY.
	* constsym.d, eval.d, init.lisp, pathname.d, subr.d: do the renaming
	* deprecated.lisp (delete-dir, make-dir, rename-dir): deprecate
	* modules/syscalls/calls.c (COPY-FILE): use L(make_directory)

2007-12-31  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1860677 ]: DIRECTORY of dirs ignores :FULL
	* pathname.d (pack_full_info, with_stat_info_computed): add
	(get_time_size) [WIN32_NATIVE]: add
	(with_stat_info_arg) [UNIX]: add
	(directory_search_scandir) [WIN32_NATIVE]: use get_time_size()
	and pack_full_info()